# redis-password-operator

./: .gitignore  Dockerfile  README.md  container_build.py  crd.yaml  deployment.yaml  example-cr.yaml  index.yaml  operator.py  pyproject.toml
charts/redis-password-operator/: Chart.yaml  values.yaml
charts/redis-password-operator/crds/: crd.yaml
charts/redis-password-operator/templates/: deployment.yaml  rbac.yaml
examples/: example-cr.yaml
redis_password_operator/: container_build.py  redis_password_operator.py
