[project]
name = "redis-password-operator"
version = "0.1.0"
description = "Operator to Manager Redis Cluster Admin Password"
requires-python = ">=3.12"
dependencies = [
    "kopf",
    "kubernetes",
    "requests",
]

[dependency-groups]
test = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-rerunfailures>=10.3",
    "pytest-mock>=3.6.1",
]
dev = [
    "hatch",
    "typer",
    "tomli"
]
