[project]
name = "redis-password-operator"
dynamic = ["version"]
description = "Operator to Manager Redis Cluster Admin Password"
requires-python = ">=3.12"
dependencies = [
    "kopf",
    "kubernetes",
    "requests",
    "typer"
]

[dependency-groups]
test = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-rerunfailures>=10.3",
    "pytest-mock>=3.6.1",
]
dev = [
    "hatch"
]

[project.scripts]
container_build = "redis_password_operator.container_build:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "redis_password_operator/__init__.py"

[tool.hatch.build.targets.sdist]
packages = ["redis_password_operator"]

[tool.hatch.build.targets.wheel]
packages = ["redis_password_operator"]
